--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4Food: O Seu delivery de Comida e Mercado</title>
+    <link rel="icon" href="./PROJ CAROL/img icons/4food - Copia.png"
 </head>
 
 <body>
     <header>
         
-        <img src="./PROJ CAROL/img icons/4food.png" alt="Logo-da-empresa" width="200">
+        <a href="./index.html"><img src="./PROJ CAROL/img icons/4food.png" alt="Logo-da-empresa" width="200"></a>
    
         <a href="./index.html">Peça Online</a>
         <a href="./index.html">Mercados e Restaurantes</a>
         <a href="./index.html">Blog</a>
         <a href="./index.html">Acompanhe-nos</a>
-        <!-- <img src="./PROJ CAROL/img icons/insta2.png" width="20" alt="logo-instagram">
-        <img src="./PROJ CAROL/img icons/logowhats2.png" width="20" alt="logo-whatsapp"> -->
-        <button type="button" >ENTRE OU CADASTRE-SE</button>
+        <a href="http://127.0.0.1:5500/login.html"><button type="button" >ENTRE OU CADASTRE-SE</button></a>
    
         <link rel="stylesheet" href="style.css">
 
     </header>
     <main>
+        <div>
         <section class="quadrado">
             <p>Olá, somos o 4Food: o Seu Delivery de Mercados e Restaurantes!
                 <br>
@@ -45,54 +45,59 @@
                 <br>O planeta, sua saúde (e seu estômago) agradecem!
             </p>
 
-            <img src="./PROJ CAROL/img icons/6427869.jpg" width="200">
+            <img id="imgprincipal" src="./PROJ CAROL/img icons/6427869.jpg" width="300">
 
-            <br>
+        </div>
         </section>
         <aside>
-            <article class="quadradinhos" id="caixa1">
-                <p>Cadastre seu estabelecimento</p>
-                Traga seu estabelecimento e tenha mais visibilidade.
+            <div class="quadradinhos">
+            <article id="caixa1">
+                <p><strong>Cadastre seu estabelecimento</strong></p>
+                Traga seu estabelecimento e tenha mais visibilidade.<br>
                 Aposte no desenvolvimento sustentável, conheça e se surpreenda com nossas ideias.
                 <br>
                 <br>
                 <button type="button">SAIBA MAIS</button>
             </article>
 
-            <article class="quadradinhos" id="caixa2">
-                <p>Conheça mais sobre nossa iniciativa</p>
-                Clique aqui e saiba mais sobre nosso apoio aos pequenos produtores e o impacto que essas ações causam.
+            <article id="caixa2">
+                <p><strong>Conheça mais sobre nossa iniciativa</strong></p>
+                Clique aqui e saiba mais <br> sobre nosso apoio aos pequenos produtores e o impacto que essas ações causam.
+                <br>
                 <br>
                 <br>
                 <button type="button">SAIBA MAIS</button>
             </article>
 
-            <article class="quadradinhos" id="caixa3">
-                <p>Faça parte do nosso time</p>
+            <article id="caixa3">
+                <p><strong>Faça parte do nosso time</strong></p>
                 Tem interesse em trabalhar conosco? Preencha nosso formulário
-                com seus dados e áreas de interesse, assim que tivermos uma vaga disponível
+                com seus dados e áreas de interesse, assim que tivermos uma vaga compatível
                 com seu perfil, entraremos em contato!
                 Nos preocupamos também com a inclusão, portanto todxs são muitx bem vindxs!
-                <br>
-                <br>
+                
                 <button type="button">QUERO FAZER PARTE</button>
             </article>
+        </div>
 
             <article class="tres" id="frase">
                 <p><strong>É para você.
                         É para o planeta.
                         É 4Food.</strong></p>
 
-                <img src="./PROJ CAROL/img icons/downAppSt.png" width="100" alt="download-app-store">
-                <img src="./PROJ CAROL/img icons/downGoogP.png" width="100" alt="download=google-play">
+                <a href="./index.html"><img src="./PROJ CAROL/img icons/downAppSt.png" width="80" alt="download-app-store"></a>
+                <a href="./index.html"><img src="./PROJ CAROL/img icons/downGoogP.png" width="80" alt="download=google-play"></a>
             </article>
         </aside>
     </main>
-    <footer></footer>
+    <footer>
+    <a href="./index.html">Contato e endereço</a>
+    <a href="./index.html">Fale conosco</a>
+    <a href="./index.html">Dúvidas ou Sugestões</a>
+    <a href="./index.html"><img src="./PROJ CAROL/img icons/insta2.png" width="20" alt="logo-instagram"></a>
+    <a href="./index.html"><img src="./PROJ CAROL/img icons/logowhats2.png" width="20" alt="logo-whatsapp"></a>
     <img src="./PROJ CAROL/img icons/4food.png" width="200" alt="logo-4food">
-    <a href="#">Contato e endereço</a>
-    <a href="#">Fale conosco</a>
-    <a href="#">Dúvidas ou Sugestões</a>
+</footer>
 </body>
 
 </html>
