--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4Food: O Seu delivery de Comida e Mercado</title>
-    <link rel="icon" href="./PROJ CAROL/img icons/4food - Copia.png"
+    <link rel="icon" href="./PROJ CAROL/img icons/4food - Copia.png">
 </head>
 
 <body>
