apliquei a responsividade nas seções

--- a/done-cadastro.html
+++ b/done-cadastro.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obrigada!</title>
+    <link rel="stylesheet" href="login.css">
+
     <link rel="icon" href="./PROJ CAROL/img icons/4food - Copia.png">
 </head>
 <body>
     <h1>Dados registrados com sucesso!</h1>
     <h2>Seja bem-vindo ❤️ 🌱 </h2>
+
+    <article id="done">
+
+        <a href="./index.html"><button type="button">VOLTAR</button> </a>
+        <br>
+        <img src="./PROJ CAROL/img icons/4food.png" width="200" alt="logo-4food">
+
+    </article>
 </body>
 </html>
