--- a/index.html
+++ b/index.html
@@ -11,93 +11,98 @@
 
 <body>
     <header>
-        
+
         <a href="./index.html"><img src="./PROJ CAROL/img icons/4food.png" alt="Logo-da-empresa" width="200"></a>
-   
+
         <a href="./index.html">Peça Online</a>
         <a href="./index.html">Mercados e Restaurantes</a>
         <a href="./index.html">Blog</a>
-        <a href="./index.html">Acompanhe-nos</a>
-        <a href="http://127.0.0.1:5500/login.html"><button type="button" >ENTRE OU CADASTRE-SE</button></a>
-   
+        <a href="https://www.instagram.com/">Acompanhe-nos</a>
+        <a href="./login.html"><button type="button">ENTRE OU CADASTRE-SE</button></a>
+
         <link rel="stylesheet" href="style.css">
 
     </header>
     <main>
         <div>
-        <section class="quadrado">
-            <p>Olá, somos o 4Food: o Seu Delivery de Mercados e Restaurantes!
-                <br>
-                Nossa proposta é muito simples: ajudar você a economizar, comer bem e
-                <br>
-                ter acesso aos melhores produtos,
-                no conforto do seu lar! Aqui você pode tudo,
-                <br>
-                desde fazer suas compras do mês, fazer sua feira,
-                até pedir aquele pratinho especial
-                <br> da sexta-feira à noite! Hmmmm... difícil resistir, né?
-                E pra completar, garantimos que
-                <br>
-                nossos fornecedores e parceiros trabalhem especialmente
-                incluindo e apoiando pequenos
-                <br>
-                produtores, incentivando assim o desenvolvimento sustentável.
-                <br>O planeta, sua saúde (e seu estômago) agradecem!
-            </p>
+            <section class="quadrado">
+                <p>Olá, somos o 4Food: o Seu Delivery de Mercados e Restaurantes!
+                    <br>
+                    Nossa proposta é muito simples: ajudar você a economizar, comer bem e
+                    <br>
+                    ter acesso aos melhores produtos,
+                    no conforto do seu lar! Aqui você pode tudo,
+                    desde fazer suas compras do mês, fazer sua feira,
+                    até pedir aquele pratinho especial
+                    da sexta-feira à noite! Hmmmm... difícil resistir, né?
+                    E pra completar, garantimos que
+                    <br>
+                    nossos fornecedores e parceiros trabalhem especialmente
+                    incluindo e apoiando pequenos
+                    <br>
+                    produtores, incentivando assim o desenvolvimento sustentável.
+                    <br>O planeta, sua saúde (e seu estômago) agradecem!
+                </p>
 
-            <img id="imgprincipal" src="./PROJ CAROL/img icons/6427869.jpg" width="300">
+                <img id="imgprincipal" src="./PROJ CAROL/img icons/6427869.jpg" width="300">
 
         </div>
         </section>
         <aside>
             <div class="quadradinhos">
-            <article id="caixa1">
-                <p><strong>Cadastre seu estabelecimento</strong></p>
-                Traga seu estabelecimento e tenha mais visibilidade.<br>
-                Aposte no desenvolvimento sustentável, conheça e se surpreenda com nossas ideias.
-                <br>
-                <br>
-                <button type="button">SAIBA MAIS</button>
-            </article>
+                <article id="caixa1">
+                    <p><strong>Cadastre seu estabelecimento</strong></p>
+                    Traga seu estabelecimento e tenha mais visibilidade.<br>
+                    Aposte no desenvolvimento sustentável, conheça e se surpreenda com nossas ideias.
+                    <br>
+                    <br>
+                    <a href="./login.html"><button type="button">SAIBA MAIS</button></a>
+                </article>
 
-            <article id="caixa2">
-                <p><strong>Conheça mais sobre nossa iniciativa</strong></p>
-                Clique aqui e saiba mais <br> sobre nosso apoio aos pequenos produtores e o impacto que essas ações causam.
-                <br>
-                <br>
-                <br>
-                <button type="button">SAIBA MAIS</button>
-            </article>
+                <article id="caixa2">
+                    <p><strong>Conheça mais sobre nossa iniciativa</strong></p>
+                    Clique aqui e saiba mais <br> sobre nosso apoio aos pequenos produtores e o impacto que essas ações
+                    causam.
+                    <br>
+                    <br>
+                    <br>
+                    <a href="./login.html"><button type="button">SAIBA MAIS</button></a>
+                </article>
 
-            <article id="caixa3">
-                <p><strong>Faça parte do nosso time</strong></p>
-                Tem interesse em trabalhar conosco? Preencha nosso formulário
-                com seus dados e áreas de interesse, assim que tivermos uma vaga compatível
-                com seu perfil, entraremos em contato!
-                Nos preocupamos também com a inclusão, portanto todxs são muitx bem vindxs!
-                
-                <button type="button">QUERO FAZER PARTE</button>
-            </article>
-        </div>
+                <article id="caixa3">
+                    <p><strong>Faça parte do nosso time</strong></p>
+                    Tem interesse em trabalhar conosco? Preencha nosso formulário
+                    com seus dados e áreas de interesse, assim que tivermos uma vaga compatível
+                    com seu perfil, entraremos em contato!
+                    Nos preocupamos também com a inclusão, portanto todxs são muitx bem vindxs!
 
-            <article class="tres" id="frase">
+                    <a href="./login.html"><button type="button">QUERO FAZER PARTE</button></a>
+                </article>
+            </div>
+
+            <article class="frasepr" id="frase">
                 <p><strong>É para você.
                         É para o planeta.
                         É 4Food.</strong></p>
 
-                <a href="./index.html"><img src="./PROJ CAROL/img icons/downAppSt.png" width="80" alt="download-app-store"></a>
-                <a href="./index.html"><img src="./PROJ CAROL/img icons/downGoogP.png" width="80" alt="download=google-play"></a>
+                <br>
+                <br>
+
+                <a href="https://www.apple.com/br/app-store/"><img src="./PROJ CAROL/img icons/downAppSt.png" width="80"
+                        alt="download-app-store"></a>
+                <a href="https://play.google.com/store"><img src="./PROJ CAROL/img icons/downGoogP.png" width="80"
+                        alt="download=google-play"></a>
             </article>
         </aside>
     </main>
     <footer>
-    <a href="./index.html">Contato e endereço</a>
-    <a href="./index.html">Fale conosco</a>
-    <a href="./index.html">Dúvidas ou Sugestões</a>
-    <a href="./index.html"><img src="./PROJ CAROL/img icons/insta2.png" width="20" alt="logo-instagram"></a>
-    <a href="./index.html"><img src="./PROJ CAROL/img icons/logowhats2.png" width="20" alt="logo-whatsapp"></a>
-    <img src="./PROJ CAROL/img icons/4food.png" width="200" alt="logo-4food">
-</footer>
+        <a href="./index.html">Contato e endereço</a>
+        <a href="./index.html">Fale conosco</a>
+        <a href="./index.html">Dúvidas ou Sugestões</a>
+        <a href="https://www.instagram.com/"><img src="./PROJ CAROL/img icons/insta2.png" width="20" alt="logo-instagram"></a>
+        <a href="https://www.whatsapp.com/?lang=pt_br"><img src="./PROJ CAROL/img icons/logowhats2.png" width="20" alt="logo-whatsapp"></a>
+        <img src="./PROJ CAROL/img icons/4food.png" width="200" alt="logo-4food">
+    </footer>
 </body>
 
 </html>
