apliquei as funcionalidades

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4Food: O Seu delivery de Comida e Mercado</title>
     <link rel="icon" href="./PROJ CAROL/img icons/4food - Copia.png">
+    <script src="funções-dom.js"></script>
 </head>
 
 <body>
@@ -21,6 +22,7 @@
         <a href="./login.html"><button type="button">ENTRE OU CADASTRE-SE</button></a>
 
         <link rel="stylesheet" href="style.css">
+        <script src="funções-dom.js"></script>
 
     </header>
     <main>
